0.4 (UNRELEASED)
----------------
New features:
- Add recording of Unix stream sockets. (part of issue #24)

0.3.2 (2013-07-18)
------------------
- script replay: Fix endless loop on end of script file.
- Fix /umockdev-run/integration/input-evtest for 32 bit architectures. Add a
  script recorded on 32 bit and select the right one in the test.
- Fix race condition in /umockdev-record/script-log-simple test which sometimes
  caused this to fail on slow machines.

0.3.1 (2013-07-18)
------------------
- Fix /umockdev-run/integration/input-touchpad test case to not leave behind an
  Xorg process on failure.
- Skip /umockdev-run/integration/input-touchpad test case on big-endian
  machines, as we do not have ioctl data from big endian machines at the moment.
- Flush the output file after each script recording event, to avoid losing data
  when recording programs that get terminated with a signal.
- Intercept SIGINT during ioctl recording, so that the record gets written even
  if the recorded program gets terminated with Control-C.
- Fix /umockdev-testbed-usb/lsusb test case to work with libusbx 1.0.16.
- Create PTY devices (for usage with get_dev_fd()) instead of plain files for
  other device types than tty as well, except for SUBSYSTEM=="usb". With that
  you can use record&replay for e. g. input or DRI control devices.
  (main part of issue #5)
- Reading scripts during device playback does not wrap around at EOF any more.
  This more closely reproduces how real devices behave. If we actually get an
  use case for wrapping around, we can do this by adding a new operation type
  to script files.

0.3 (2013-07-12)
----------------
Command line argument changes (not backwards compatible):
- Change umockdev-record's --ioctl option: The argument is now
  "devicefile=outputfile" like with umockdev-run, instead of specifying the
  device as the first positional argument. This was inconsistant, and is
  necessary to support other kinds of recording in the future.