@@ -36,6 +36,7 @@ src/umockdev-run.c
 src/umockdev-record
 src/umockdev-record.c
 tests/chatter
+tests/chatter-socket-stream
 tests/test-ioctl-tree
 tests/test-umockdev-vala.c
 tests/test-umockdev
